# tasks-python-2025

./: README.md  pyproject.toml
algorithms/data_structures/: linked_list.py  queue.py  stack.py
algorithms/graphs/: adjacency_matrix.ipynb  cycle_in_graph.ipynb
algorithms/recursion/: factorial.py  fibonacci.py  summation.py
algorithms/searching/: binary_search_continuous.ipynb  binary_search_discrete.py
algorithms/sorting/: bubble_sort.py  merge_sort.py  quick_sort.py
algorithms/trees/: bfs.ipynb  bst.ipynb  dfs.ipynb
coding_topics/advanced_data_structures/: address_book_management.py  dictionary_example.py  document_history_management.py  employee_records_system.py  enrollment_management.py  file_system.py  test_enrollment_management.py  test_file_system.py
coding_topics/classes_revision/: attribute_inheritance.py  encapsulation_and_privacy.py  super_method.py
coding_topics/complex_data_structures/: stack_and_queue_example.py  tuple_example.py
coding_topics/data_streams/: order_management_system.md
coding_topics/projection_filtering_aggregation/: data_projection_class_example.py  reduce_example.py
hackerrank/python/: counter.py  dominant_cell.py  find_string.py  ginortS.py  log_counter.py  longest_subarray.py  mutations.py  no_idea.py  removable_indices.py
hackerrank/sql/: binary_tree_nodes.sql  top_earners.sql
typical_problems/: interview_problems.ipynb
